added survey link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 										</header>
 										<p>Alternative text is an essential part of every website for users that use screen reading technology to be able to percive content conveyed through images. Alternative text that accurately and concisely explains image content can take precious time to write; especially for websites that contain thousands of images! AlternaAI expedites this process, utlizing a machine learning model to create alternative text based on the image and the context surrounding it on the page.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdn-8uvfVTeljLGEAjnITnlu7AVQu3kd25patwgkrilLqrTJQ/viewform?usp=header" class="button big">Survey</a></li>
 										</ul>
 									</div>
 								</section>
